--- a/book.toml
+++ b/book.toml
@@ -4,3 +4,9 @@ language = "en"
 multilingual = false
 src = "src"
 title = "Assignment Process & Safety Jurriën Arends"
+
+[preprocessor.plantuml]
+plantuml-cmd="http://localhost:8181"
+
+[output.html]
+default-theme = "Rust"
